--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "me",
+  "author": "pran",
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.6",
